# Multi-Agent-Knowledge-Graph-Chatbot

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  README.md  TODO.md  env.example  pyproject.toml  requirements-all.txt  requirements-dev.txt  requirements.txt  setup.py
src/knowledge_graph/: __init__.py  client.py  client_v1.py  config.py
src/knowledge_graph/documents/: __init__.py  base.py  docx.py  html.py  markdown.py  pdf.py  txt.py
src/knowledge_graph/v1/: __init__.py
src/knowledge_graph/v1/config/: __init__.py  config.py  prompt_manager.py  prompts.yaml
src/knowledge_graph/v1/models/: __init__.py  blackboard.py
src/knowledge_graph/v1/services/: __init__.py  evaluation.py  ingestion.py  preprocessor.py
src/knowledge_graph/v1/utils/: __init__.py  logger_config.py
tests/: test_both_clients.py  test_client.py  test_documents.py  test_mandatory_group_id.py
